add remote debugging support for docker; enable gc logging